--- a/MediaBrowser.WebDashboard/dashboard-ui/itemdetails.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/itemdetails.html
@@ -172,57 +172,57 @@
                 </div>
                 <div class="collectionItems"></div>
                 <div id="childrenCollapsible" class="hide detailSection">
-                    <div class="detailSectionHeader childrenSectionHeader">
+                    <h1 class="childrenSectionHeader">
                         <span id="childrenTitle"></span>
-                    </div>
-                    <div id="childrenContent" class="detailSectionContent">
+                    </h1>
+                    <div id="childrenContent">
                         <div class="childrenItemsContainer itemsContainer fullWidthItemsContainer" style="text-align:left;"></div>
                     </div>
                 </div>
                 <div id="additionalPartsCollapsible" class="detailSection hide">
-                    <div class="detailSectionHeader">
+                    <h1>
                         ${HeaderAdditionalParts}
-                    </div>
-                    <div id="additionalPartsContent" class="detailSectionContent smallItemsContainer"></div>
+                    </h1>
+                    <div id="additionalPartsContent" class="smallItemsContainer"></div>
                 </div>
                 <div id="castCollapsible" style="display: none;" class="detailSection">
-                    <div id="peopleHeader" class="detailSectionHeader">
+                    <h1 id="peopleHeader">
                         ${HeaderCastCrew}
-                    </div>
-                    <div id="castContent" class="detailSectionContent"></div>
+                    </h1>
+                    <div id="castContent"></div>
                 </div>
 
                 <div class="detailSection photoInfo hide">
-                    <div class="detailSectionHeader">
+                    <h1>
                         ${HeaderPhotoInfo}
-                    </div>
-                    <div class="detailSectionContent" style="padding:1em;">
+                    </h1>
+                    <div>
                         <div class="photoInfoContent"></div>
                     </div>
                 </div>
 
                 <div id="specialsCollapsible" class="detailSection hide">
-                    <div class="detailSectionHeader">
+                    <h1>
                         ${HeaderSpecialFeatures}
-                    </div>
-                    <div id="specialsContent" class="detailSectionContent smallItemsContainer"></div>
+                    </h1>
+                    <div id="specialsContent" class="smallItemsContainer"></div>
                 </div>
                 <div id="musicVideosCollapsible" style="display: none;" class="detailSection">
-                    <div class="detailSectionHeader">
+                    <h1>
                         ${HeaderMusicVideos}
-                    </div>
-                    <div id="musicVideosContent" class="detailSectionContent smallItemsContainer"></div>
+                    </h1>
+                    <div id="musicVideosContent" class="smallItemsContainer"></div>
                 </div>
                 <div id="similarCollapsible" style="display: none;" class="detailSection">
-                    <div class="detailSectionHeader">
-                    </div>
-                    <div id="similarContent" class="detailSectionContent"></div>
+                    <h1 class="similiarHeader">
+                    </h1>
+                    <div id="similarContent"></div>
                 </div>
                 <div id="criticReviewsCollapsible" style="display: none;" class="detailSection">
-                    <div class="detailSectionHeader">
+                    <h1>
                         ${HeaderAwardsAndReviews}
-                    </div>
-                    <div style="padding: 0 .5em;">
+                    </h1>
+                    <div>
                         <p id="awardSummary"></p>
                         <div id="criticRatingSummary" class="criticReview criticRatingSummary" style="display: none;">
                             <p style="margin: 0 0 .5em -40px; font-weight: bold;">TOMATOMETER®</p>
@@ -232,28 +232,28 @@
                             <div class="criticRatingScore"></div>
                             <div class="criticRatingSummaryText"></div>
                         </div>
-                        <div id="criticReviewsContent" class="detailSectionContent"></div>
+                        <div id="criticReviewsContent"></div>
                     </div>
                 </div>
 
                 <div id="scenesCollapsible" style="display: none;" class="detailSection">
-                    <div class="detailSectionHeader">
+                    <h1>
                         ${HeaderScenes}
-                        <a class="detailSectionHeaderButton chapterSettingsButton clearLink" style="margin-top:-3px;display:inline-block;" href="metadataadvanced.html" title="${ButtonSettings}" style="display:none;"><paper-icon-button icon="settings"></paper-icon-button></a>
-                    </div>
-                    <div id="scenesContent" class="detailSectionContent smallItemsContainer"></div>
+                        <a class="detailSectionHeaderButton chapterSettingsButton clearLink" style="margin-top:-8px;display:inline-block;" href="metadataadvanced.html" title="${ButtonSettings}" style="display:none;"><paper-icon-button icon="settings"></paper-icon-button></a>
+                    </h1>
+                    <div id="scenesContent" class="smallItemsContainer"></div>
                 </div>
                 <div id="themeSongsCollapsible" style="display: none;" class="detailSection">
-                    <div class="detailSectionHeader">
+                    <h1>
                         ${HeaderThemeSongs}
-                    </div>
-                    <div id="themeSongsContent" class="detailSectionContent"></div>
+                    </h1>
+                    <div id="themeSongsContent"></div>
                 </div>
                 <div class="detailSection detailsSection">
-                    <div class="detailSectionHeader">
+                    <h1>
                         ${HeaderDetails}
-                    </div>
-                    <div class="detailSectionContent" style="padding:0 1em;">
+                    </h1>
+                    <div>
                         <div class="tabDetails">
                             <p id="players"></p>
                             <p class="itemExternalLinks"></p>
@@ -264,15 +264,15 @@
                 </div>
 
                 <div id="themeVideosCollapsible" style="display: none;" class="detailSection">
-                    <div class="detailSectionHeader">
+                    <h1>
                         ${HeaderThemeVideos}
-                    </div>
-                    <div id="themeVideosContent" class="detailSectionContent smallItemsContainer"></div>
+                    </h1>
+                    <div id="themeVideosContent" class="smallItemsContainer"></div>
                 </div>
 
                 <div class="detailSection audioVideoMediaInfo hide">
-                    <h2 class="detailSectionHeader">${HeaderMediaInfo}</h2>
-                    <div class="detailSectionContent" style="padding: 0 .7em;">
+                    <h1>${HeaderMediaInfo}</h1>
+                    <div>
                         <div class="splitVersionContainer" style="border-bottom: 1px solid #444;">
                             <button type="button" class="btnSplitVersions" data-mini="true" data-inline="true" data-icon="delete" title="${ButtonSplitVersionsApart}">${ButtonSplitVersionsApart}</button>
                         </div>
