--- a/MediaBrowser.WebDashboard/dashboard-ui/mysync.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/mysync.html
@@ -12,7 +12,22 @@
 
         <div data-role="content">
 
-            <div class="ehsContent">
+            <div class="supporterPromotionContainer" style="display:none;text-align: right;">
+                <div class="customSupporterPromotion supporterPromotion inlineSupporterPromotion">
+                    <a class="btn btnActionAccent" href="supporter.html" style="font-size:14px;">
+                        <div>
+                            ${HeaderSyncRequiresSupporterMembership}
+                        </div>
+                        <div>
+                            ${HeaderEnjoyDayTrial}
+                        </div>
+                        <div style="font-weight:normal;font-size:90%;margin-top:5px;">
+                            ${ButtonLearnMore}
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="ehsContent" style="clear:both;">
                 <br />
                 <div class="syncActivity">
 
