--- a/MediaBrowser.WebDashboard/dashboard-ui/syncactivity.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/syncactivity.html
@@ -20,18 +20,20 @@
                     <progress max="100" min="0" style="width:100px;display:none;" class="syncProgress"></progress>
                 </div>
                 <br />
-                <div class="staticSupporterPromotion supporterPromotion syncPromotion" style="display:none;">
-                    <a class="btn btnActionAccent" href="supporter.html" style="font-size:14px;">
-                        <div>
-                            ${HeaderSyncRequiresSupporterMembership}
-                        </div>
-                        <div>
-                            ${HeaderEnjoyDayTrial}
-                        </div>
-                        <div style="font-weight:normal;font-size:90%;margin-top:5px;">
-                            ${ButtonLearnMore}
-                        </div>
-                    </a>
+                <div class="supporterPromotionContainer" style="display:none;">
+                    <div class="customSupporterPromotion supporterPromotion">
+                        <a class="btn btnActionAccent" href="supporter.html" style="font-size:14px;">
+                            <div>
+                                ${HeaderSyncRequiresSupporterMembership}
+                            </div>
+                            <div>
+                                ${HeaderEnjoyDayTrial}
+                            </div>
+                            <div style="font-weight:normal;font-size:90%;margin-top:5px;">
+                                ${ButtonLearnMore}
+                            </div>
+                        </a>
+                    </div>
                 </div>
                 <div class="syncActivity">
 
