add sync settings page

--- a/MediaBrowser.WebDashboard/dashboard-ui/mypreferencesmenu.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/mypreferencesmenu.html
@@ -83,6 +83,16 @@
                             </paper-item-body>
                         </paper-icon-item>
                     </a>
+
+                    <a href="#" class="clearLink lnkSync hide">
+                        <paper-icon-item>
+                            <paper-fab class="avatar" icon="refresh" style="background-color:#673AB7;" item-icon></paper-fab>
+                            <paper-item-body two-line>
+                                <div>${ButtonSyncSettings}</div>
+                                <div secondary>${ButtonSyncHelp}</div>
+                            </paper-item-body>
+                        </paper-icon-item>
+                    </a>
                 </div>
             </div>
         </div>
