--- a/MediaBrowser.WebDashboard/dashboard-ui/connectlogin.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/connectlogin.html
@@ -29,7 +29,7 @@
                 </div>
                 <div class="skip">
                     <paper-button raised class="cancel block btnSkipConnect"><iron-icon icon="close"></iron-icon><span>${ButtonSkip}</span></paper-button>
-                    <div class="fieldDescription">${TextConnectToServerManually}</div>
+                    <div class="fieldDescription" style="text-align:center;">${TextConnectToServerManually}</div>
                 </div>
 
                 <div class="newUsers" style="margin-top:2em;">
