--- a/MediaBrowser.WebDashboard/dashboard-ui/wizardagreement.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/wizardagreement.html
@@ -11,26 +11,21 @@
             <div class="ui-corner-all ui-shadow wizardContent" style="position:relative;">
                 <form class="wizardAgreementForm">
 
+                    <h1>
+                        <img src="css/images/mblogoicon.png" style="vertical-align:middle;height:30px;margin-right:5px;" />${HeaderTermsOfService}
+                    </h1>
+
+                    <p style="margin-top:2em;">${MessagePleaseAcceptTermsOfService}</p>
+
+                    <p style="margin:1.5em 0;"><a href="http://emby.media/privacy" target="_blank">${ButtonPrivacyPolicy}</a></p>
+                    <p style="margin:1.5em 0;"><a href="http://emby.media/terms" target="_blank">${ButtonTermsOfService}</a></p>
                     <div>
-                        <h2 style="float:left;">
-                            <img src="css/images/mblogoicon.png" />${HeaderTermsOfService}
-                        </h2>
+                        <paper-checkbox class="chkAccept" checked>${OptionIAcceptTermsOfService}</paper-checkbox>
                     </div>
 
-                    <br style="clear:both;" />
-                    <p>${MessagePleaseAcceptTermsOfService}</p>
-
-                    <p><a href="http://emby.media/privacy" target="_blank">${ButtonPrivacyPolicy}</a></p>
-                    <p><a href="http://emby.media/terms" target="_blank">${ButtonTermsOfService}</a></p>
-                    <ul data-role="listview" class="ulForm">
-                        <li>
-                            <label for="chkAccept">${OptionIAcceptTermsOfService}</label>
-                            <input id="chkAccept" type="checkbox" />
-                        </li>
-                    </ul>
-
                     <div class="wizardNavigation">
-                        <button type="submit" data-iconpos="right" data-icon="arrow-r" data-inline="true">${LabelNext}</button>
+                        <button type="button" data-role="none" class="clearButton" style="width:auto;" onclick="history.back();"><paper-button raised class="subdued"><iron-icon icon="arrow-back"></iron-icon><span>${LabelPrevious}</span></paper-button></button>
+                        <button type="submit" data-role="none" class="clearButton" style="width:auto;"><paper-button raised class="accent"><iron-icon icon="arrow-forward"></iron-icon><span>${LabelNext}</span></paper-button></button>
                     </div>
                 </form>
             </div>
