--- a/MediaBrowser.WebDashboard/dashboard-ui/wizardsettings.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/wizardsettings.html
@@ -10,23 +10,19 @@
 
             <div class="ui-corner-all ui-shadow wizardContent">
                 <form class="wizardSettingsForm">
-                    <h2>
-                        <img src="css/images/mblogoicon.png" />${LabelConfigureSettings}
-                    </h2>
-
-                    <br />
-                    <div style="margin: 1em 0;">
-                        <input type="checkbox" id="chkEnableInternetProviders" name="chkEnableInternetProviders" checked="checked" />
-                        <label for="chkEnableInternetProviders">${LabelDownloadInternetMetadata}</label>
-                        <div class="fieldDescription">${LabelDownloadInternetMetadataHelp}</div>
+                    <h1>
+                        <img src="css/images/mblogoicon.png" style="vertical-align:middle;height:30px;margin-right:5px;" />${LabelConfigureSettings}
+                    </h1>
+                    <div style="margin: 3em 0;">
+                        <paper-checkbox class="chkEnableInternetProviders" checked>${LabelDownloadInternetMetadata}</paper-checkbox>
+                        <div class="fieldDescription paperCheckboxFieldDescription">${LabelDownloadInternetMetadataHelp}</div>
                     </div>
                     <div style="margin: 2em 0;">
-                        <label for="chkSaveLocalMetadata">${LabelSaveLocalMetadata}</label>
-                        <input id="chkSaveLocalMetadata" name="chkSaveLocalMetadata" type="checkbox" />
-                        <div class="fieldDescription">${LabelSaveLocalMetadataHelp}</div>
+                        <paper-checkbox class="chkSaveLocalMetadata">${LabelSaveLocalMetadataHelp}</paper-checkbox>
+                        <div class="fieldDescription paperCheckboxFieldDescription">${LabelSaveLocalMetadataHelp}</div>
                     </div>
 
-                    <h2 style="margin-top: 1.5em;">${HeaderPreferredMetadataLanguage}</h2>
+                    <h1 style="margin-top: 1.5em;">${HeaderPreferredMetadataLanguage}</h1>
 
                     <div style="margin: 2em 0;">
                         <label for="selectLanguage">${LabelLanguage}</label>
@@ -39,8 +35,8 @@
                     </div>
 
                     <div class="wizardNavigation">
-                        <button type="button" data-iconpos="left" data-icon="arrow-l" data-inline="true" onclick="history.back();">${LabelPrevious}</button>
-                        <button id="btnNextPage" type="submit" data-iconpos="right" data-icon="arrow-r" data-inline="true">${LabelNext}</button>
+                        <button type="button" data-role="none" class="clearButton" style="width:auto;" onclick="history.back();"><paper-button raised class="subdued"><iron-icon icon="arrow-back"></iron-icon><span>${LabelPrevious}</span></paper-button></button>
+                        <button type="submit" data-role="none" class="clearButton" style="width:auto;"><paper-button raised class="accent"><iron-icon icon="arrow-forward"></iron-icon><span>${LabelNext}</span></paper-button></button>
                     </div>
                 </form>
             </div>
