--- a/MediaBrowser.WebDashboard/dashboard-ui/wizarduser.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/wizarduser.html
@@ -10,35 +10,30 @@
 
             <div class="ui-corner-all ui-shadow wizardContent">
                 <form class="wizardUserForm">
-                    <h2>
-                        <img src="css/images/mblogoicon.png" style="height: 30px;" />${TellUsAboutYourself}
-                    </h2>
+                    <h1>
+                        <img src="css/images/mblogoicon.png" style="height: 30px;vertical-align:middle;margin-right:5px;" />${TellUsAboutYourself}
+                    </h1>
 
-                    <p>${UserProfilesIntro}</p>
+                    <p style="margin-top:2em;">${UserProfilesIntro}</p>
 
-                    <ul data-role="listview" class="ulForm">
-                        <li>
-                            <label for="txtUsername">${LabelYourFirstName}</label>
-                            <input type="text" id="txtUsername" name="txtUsername" required="required" />
-                            <div class="fieldDescription">${MoreUsersCanBeAddedLater}</div>
-                        </li>
-                    </ul>
-                    <h2>${HeaderOptionalLinkEmbyAccount}</h2>
+                    <div>
+                        <paper-input type="text" id="txtUsername" label="${LabelYourFirstName}" required="required"></paper-input>
+                        <div class="fieldDescription">${MoreUsersCanBeAddedLater}</div>
+                    </div>
                     <br />
-                    <ul data-role="listview" class="ulForm">
-                        <li>
-                            <label for="txtConnectUserName">${LabelConnectUserName}</label>
-                            <input id="txtConnectUserName" type="text" />
-                            <div class="fieldDescription">
-                                <div>${LabelConnectUserNameHelp}</div>
-                                <div style="margin-top: .75em;"><a href="http://emby.media/connect" target="_blank">${ButtonLearnMoreAboutEmbyConnect}</a></div>
-                            </div>
-                        </li>
-                    </ul>
-
+                    <h1 style="margin-bottom:.25em;">${HeaderOptionalLinkEmbyAccount}</h1>
+                    <div>
+                        <paper-input type="text" id="txtConnectUserName" label="${LabelConnectUserName}"></paper-input>
+                        <div class="fieldDescription">
+                            <div>${LabelConnectUserNameHelp}</div>
+                            <div style="margin-top: .7em;"><a href="http://emby.media/connect" target="_blank">${ButtonLearnMoreAboutEmbyConnect}</a></div>
+                        </div>
+                    </div>
+                    <br />
+                    <br />
                     <div class="wizardNavigation">
-                        <button type="button" data-iconpos="left" data-icon="arrow-l" data-inline="true" onclick="history.back();">${LabelPrevious}</button>
-                        <button type="submit" data-iconpos="right" data-icon="arrow-r" data-inline="true">${LabelNext}</button>
+                        <button type="button" data-role="none" class="clearButton" style="width:auto;"><paper-button raised class="subdued"><iron-icon icon="arrow-back"></iron-icon><span>${LabelPrevious}</span></paper-button></button>
+                        <button type="submit" data-role="none" class="clearButton" style="width:auto;"><paper-button raised class="accent"><iron-icon icon="arrow-forward"></iron-icon><span>${LabelNext}</span></paper-button></button>
                     </div>
                 </form>
             </div>
