update stream builder subtitles

--- a/MediaBrowser.WebDashboard/dashboard-ui/notificationlist.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/notificationlist.html
@@ -4,16 +4,17 @@
     <title>${TitleNotifications}</title>
 </head>
 <body>
-    <div id="notificationsPage" data-role="page" class="page libraryPage noSecondaryNavPage" data-require="scripts/notificationlist,paperbuttonstyle">
+    <div id="notificationsPage" data-role="page" class="page type-interior" data-require="scripts/notificationlist,paperbuttonstyle">
 
         <div data-role="content">
+            <div class="content-primary">
 
-            <div class="readOnlyContent" style="margin: auto;max-width:900px;">
+                <div class="readOnlyContent" style="max-width:900px;">
 
-                <h1>${TitleNotifications}</h1>
-                <div class="notificationsList" style="margin-top: 1em;">
+                    <div class="notificationsList" style="margin-top: 1em;">
+                    </div>
+
                 </div>
-
             </div>
         </div>
     </div>
