add new voice commands

--- a/MediaBrowser.WebDashboard/dashboard-ui/nowplaying.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/nowplaying.html
@@ -49,9 +49,9 @@
                                 <paper-fab icon="movie" class="btnChapters videoButton btnPlayStateCommand subdued" title="${ButtonScenes}" data-command="GoToSearch"></paper-fab>
                                 <paper-fab icon="fullscreen" class="btnToggleFullscreen videoButton btnPlayStateCommand subdued" title="${ButtonFullscreen}" data-command="ToggleFullscreen"></paper-fab>
                             </div>
-                            <div class="buttonsRow3">
+                            <!--<div class="buttonsRow3">
                                 <paper-fab icon="info" class="btnCommand videoButton subdued" title="${ButtonOsd}" data-command="ToggleOsdMenu"></paper-fab>
-                            </div>
+                            </div>-->
                             <div class="nowPlayingPageVolumeControl">
                                 <paper-fab icon="repeat" class="btnCommand subdued repeatToggleButton" title="${ButtonRepeat}" data-command="SetRepeatMode"></paper-fab>
                                 <paper-fab icon="volume-off" class="btnCommand subdued volumeButton" title="${ButtonMute}" data-command="ToggleMute"></paper-fab>
